--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "deprem-yardim-map-iframe",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -11,10 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@types/leaflet": "^1.9.0",
-    "@types/leaflet.markercluster": "^1.5.1",
     "astro": "^2.0.6",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.5.1"
   }
 }
